--- a/index.html
+++ b/index.html
@@ -473,6 +473,39 @@
             top: 120%;
             margin-left: 20px;
         }
+         @media (max-width: 768px) {
+            .navigation ul li {
+                display: block;
+                margin: 10px 0;
+            }
+
+            .footer-content {
+                width: 95%;
+            }
+
+            .moretopic1,
+            .moretopic2,
+            .moretopic3 {
+                font-size: 18px;
+                padding: 10px;
+            }
+
+            .moretopic1 img,
+            .moretopic2 img,
+            .moretopic3 img {
+                width: 70%;
+            }
+
+            .header {
+                margin: 20px;
+                text-align: center;
+            }
+
+            .introduction {
+                width: 95%;
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 
