--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <style>
-       body {
+      body {
     background-image: linear-gradient(45deg, #FFFDD0, #FFB6C1);
     margin: 0;
 }
@@ -472,6 +472,60 @@ button {
     .navigation ul {
         padding: 0;
         text-align: center;
+    }
+
+    .navigation p {
+        position: relative;
+        top: 0;
+        margin: 10px auto;
+    }
+
+    table {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .moretopic1,
+    .moretopic2,
+    .moretopic3 {
+        width: 80%;
+        height: auto;
+        margin: 10px auto;
+    }
+
+    .footer {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    textarea {
+        width: 80%;
+        left: 10%;
+        top: auto;
+    }
+
+    .button {
+        left: 50%;
+        transform: translateX(-50%);
+        top: auto;
+    }
+}
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .introduction,
+    .text {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .navigation ul {
+        padding: 0;
+        text-align: center;
+    }
+
+    .navigation ul li {
+        display: inline-block;
+        margin: 10px 5px; /* Adjust margin for spacing between items */
     }
 
     .navigation p {
