--- a/index.html
+++ b/index.html
@@ -455,8 +455,11 @@ button {
 }
 
 /* Responsive Styles */
-/* Responsive Styles */
 @media (max-width: 800px) {
+    body {
+        overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
+
     .introduction,
     .text {
         width: 90%;
@@ -509,6 +512,7 @@ button {
         display: block; /* Ensure button is centered */
     }
 }
+
 
     </style>
 </head>
