--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@ button {
     .text {
         width: 90%;
         margin: 10px auto; /* Center the content horizontally */
+        max-width: 500px; /* Limit max-width to prevent overflow */
     }
 
     .navigation ul {
@@ -512,7 +513,6 @@ button {
         display: block; /* Ensure button is centered */
     }
 }
-
 
     </style>
 </head>
