--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@ button {
 
     .introduction,
     .text {
-        width: 90%;
-        margin: 10px auto; /* Center the content horizontally */
-        max-width: 500px; /* Limit max-width to prevent overflow */
+        width: 100%;
+        margin: 5px auto; /* Center the content horizontally */
+        max-width: 400px; /* Limit max-width to prevent overflow */
     }
 
     .navigation ul {
@@ -474,13 +474,13 @@ button {
 
     .navigation ul li {
         display: inline-block;
-        margin: 10px; /* Adjust margin for spacing between items */
+        margin: 5px; /* Adjust margin for spacing between items */
     }
 
     .navigation p {
         position: relative;
         top: 0;
-        margin: 10px auto;
+        margin: 5px auto;
     }
 
     table {
@@ -498,6 +498,8 @@ button {
     }
 
     .footer {
+        position: absolute;
+        top: 90%;
         width: 90%;
         margin: 20px auto;
     }
@@ -505,12 +507,17 @@ button {
     textarea {
         width: 90%;
         max-width: 300px; /* Limit width for smaller devices */
-        margin: 10px auto;
+        margin: 0px ;
+        position: abosolute;
+        top:85%;
+        left: 35%
     }
 
     .button {
         margin: 10px auto;
         display: block; /* Ensure button is centered */
+        position: abosolute;
+        top:90%;
     }
 }
 
