--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             .l4,
             .l5,
             .l6 {
-                width: 40px;
+                width: 35px;
                 font-size: 8px;
                 position: absolute;
             }
@@ -554,8 +554,7 @@
             }
 
             table {
-                margin-left:0px;
-                margin-right: 0px;
+               margin: 10px;
             }
 
             .moretopic1 {
