--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
             }
 
             table {
-               margin: 10px;
-            }
+               width: auto;
+        margin: 0 auto;            }
 
             .moretopic1 {
                 width: 90%;
