--- a/index.html
+++ b/index.html
@@ -553,9 +553,10 @@
                 margin: 5px;
             }
 
-            table {
-               width: auto;
-        margin: 0 auto;            }
+            .footer table {
+                width: auto;
+        margin: 0 auto;
+            }
 
             .moretopic1 {
                 width: 90%;
