--- a/index.html
+++ b/index.html
@@ -556,7 +556,13 @@
             .footer table {
                 width: auto;
         margin: 0 auto;
+                background-color: white;
             }
+             table tr td {
+            padding-top: 10px;
+            padding-left: 30px;
+            padding-bottom: 20px;
+        }
 
             .moretopic1 {
                 width: 90%;
