--- a/index.html
+++ b/index.html
@@ -554,13 +554,10 @@
             }
 
             .footer table {
-                width: auto;
-        margin: 0 auto;
-                background-color: white;
             }
              table tr td {
-            padding-top: 10px;
-            padding-left: 30px;
+            margin-top: 10px;
+            margin-left: 30px;
             padding-bottom: 20px;
         }
 
@@ -597,6 +594,8 @@
                 top: 275%;
             }
             .footer {
+                background-color: white;
+                border: none;
                 position: absolute;
                 left: 2%;
                 top: 310%;
