--- a/index.html
+++ b/index.html
@@ -554,6 +554,7 @@
             }
 
             .footer table {
+                width: 89%;
             }
              table tr td {
             margin-top: 10px;
@@ -596,10 +597,10 @@
             .footer {
                 background-color: white;
                 border: none;
+                border-radius: none;
                 position: absolute;
                 left: 2%;
                 top: 310%;
-                width: 77%;
                 /* margin: 20px auto; */
 
             }
