--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
             .introduction,
             .text {
-                width: 70%;
+                width: 80%;
                 margin: 20px;
                 /* Center the content horizontally */
                 max-width: 500px;
@@ -552,9 +552,8 @@
                 /* top: 0; */
                 margin: 5px;
             }
-
-            .footer table {
-                width: 89%;
+            .header{
+                margin-top: 10px;
             }
              table tr td {
             margin-top: 10px;
@@ -570,7 +569,7 @@
                 font-size: 10px;
                 margin-left: 20px;
                 position: absolute;
-                top: 200%;
+                top: 205%;
             }
             .moretopic2 {
                 width: 90%;
@@ -581,7 +580,7 @@
                 margin-left: 20px;
                 font-size: 10px;
                 position: absolute;
-                top: 235%;
+                top: 245%;
             }
             .moretopic3 {
                 width: 90%;
@@ -592,7 +591,7 @@
                 font-size: 10px;
                 margin-left: 20px;
                 position: absolute;
-                top: 275%;
+                top: 280%;
             }
             .footer {
                 background-color: white;
@@ -649,7 +648,7 @@
             }
             #four{
                 position: absolute;
-                top: 125%;
+                top: 130%;
             }
             #five{
                 position: absolute;
@@ -661,7 +660,7 @@
             }
             .moretopic h2{
                 position: absolute;
-                top: 190%;
+                top: 195%;
             }
 
         }
