--- a/index.html
+++ b/index.html
@@ -555,6 +555,10 @@
             .header{
                 margin-top: 10px;
             }
+            .table{
+                margin-left: auto;
+                margin-right: auto;
+                
              table tr td {
             margin-top: 10px;
             margin-left: 30px;
@@ -591,7 +595,7 @@
                 font-size: 10px;
                 margin-left: 20px;
                 position: absolute;
-                top: 280%;
+                top: 285%;
             }
             .footer {
                 background-color: white;
@@ -640,23 +644,23 @@
             }
             #two{
                 position: absolute;
-                top: 85%;
+                top: 75%;
             }
             #three{
                 position: absolute;
-                top: 105%;
+                top: 85%;
             }
             #four{
                 position: absolute;
-                top: 130%;
+                top: 98.30%;
             }
             #five{
                 position: absolute;
-                top: 150%;
+                top: 114%;
             }
             #six{
                 position: absolute;
-                top: 175%;
+                top: 123%;
             }
             .moretopic h2{
                 position: absolute;
