--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             }
             .table{
                 margin-left: auto;
-                margin-right: auto;
+                margin-right: auto;}
                 
              table tr td {
             margin-top: 10px;
@@ -636,7 +636,7 @@
         }
             .introduction{
                 position: absolute;
-                top: 45%;
+                top: 50%;
             }
             #one{
                 position: absolute;
