--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
             margin-top: 10px;
             margin-left: 30px;
             padding-bottom: 20px;
+                 color: black;
         }
 
             .moretopic1 {
@@ -599,7 +600,7 @@
                 
                 position: absolute;
                 left: 2%;
-                top: 310%;
+                top: 315%;
                 /* margin: 20px auto; */
 
             }
@@ -640,23 +641,23 @@
             }
             #two{
                 position: absolute;
-                top: 75%;
+                top: 80%;
             }
             #three{
                 position: absolute;
-                top: 85%;
+                top: 90%;
             }
             #four{
                 position: absolute;
-                top: 98.30%;
+                top: 105%;
             }
             #five{
                 position: absolute;
-                top: 114%;
+                top: 120%;
             }
             #six{
                 position: absolute;
-                top: 124%;
+                top: 135%;
             }
             .moretopic h2{
                 position: absolute;
