--- a/index.html
+++ b/index.html
@@ -511,9 +511,9 @@
             }
 
 
-            .text1 img{
+            /* .text1 img{
                 width: 15px;
-            }
+            } */
             .moretopic img .moretopic1 img .moretopic2 img .moretopic3 img{
                 width:2cm;
             }
@@ -563,23 +563,23 @@
             }
             #two{
                 position: absolute;
-                top: 83%;
+                top: 80%;
             }
             #three{
                 position: absolute;
-                top: 98%;
+                top: 92%;
             }
             #four{
                 position: absolute;
-                top: 176%;
+                top: 107%;
             }
             #five{
                 position: absolute;
-                top: 142%;
+                top: 124%;
             }
             #six{
                 position: absolute;
-                top: 162%;
+                top: 139%;
             }
             .moretopic h2{
                 position: absolute;
